add: alternate text for image

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="container">
-        <img src="img/image-qr-code.png">
+        <img src="img/image-qr-code.png" alt="image-qr-code">
 
         <h2>Improve your front-end skills by building projects</h2>
 
